--- a/docker/.env
+++ b/docker/.env
@@ -20,3 +20,9 @@ CDN_URL=http://localhost:8501
 
 #TIMEZONE
 TIMEZONE=3
+
+############### DB #########################
+MYSQL_ROOT_PASSWORD=5986
+MYSQL_DATABASE=test
+MYSQL_USER=testUser
+MYSQL_PASSWORD=user5986
