--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -14,6 +14,7 @@ services:
             - app
         volumes:
             - ../:/var/www/html
+        restart: always
         container_name: len_web
     app:
         build: 
@@ -30,7 +31,23 @@ services:
             net:
         volumes:
             - ../:/var/www/html
+        restart: always
         container_name: len_app
+    db:
+        image: mysql:8.0
+        ports:
+            - "$DB_PORT:5432"
+        environment:
+            MYSQL_ROOT_PASSWORD: $MYSQL_ROOT_PASSWORD
+            MYSQL_DATABASE: $MYSQL_DATABASE
+            MYSQL_USER: $MYSQL_USER
+            MYSQL_PASSWORD: $MYSQL_PASSWORD
+        networks:
+            net:
+        volumes:
+           - ./storage/mysql:/var/lib/mysql
+        restart: always
+        container_name: len_db
 
 networks:
     net:
