--- a/docker/conf/nginx/nginx.conf
+++ b/docker/conf/nginx/nginx.conf
@@ -10,7 +10,7 @@ events {
 http {
 	server {
 	  listen 80;
-	  root /var/www/html;
+	  root /var/www/html/public;
 	  index index.php;
 	  charset utf-8;
 
