--- a/docker/.env
+++ b/docker/.env
@@ -23,7 +23,7 @@ TIMEZONE=3
 
 ############### DB #########################
 MYSQL_ROOT_PASSWORD=5986
-MYSQL_DATABASE=test
+MYSQL_DATABASE=testing
 MYSQL_USER=testUser
 MYSQL_PASSWORD=user5986
 DB_PORT=3307
