--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -8,6 +8,12 @@ services:
             - "$HTTP_PORT_BACK:80"
         tty: 
             true
+        environment:
+            MYSQL_ROOT_PASSWORD: $MYSQL_ROOT_PASSWORD
+            MYSQL_DATABASE: $MYSQL_DATABASE 
+            MYSQL_USER: $MYSQL_USER
+            MYSQL_PASSWORD: $MYSQL_PASSWORD
+            DB_PORT: $DB_PORT
         networks:
             net:
         depends_on:
@@ -28,7 +34,7 @@ services:
             MYSQL_DATABASE: $MYSQL_DATABASE
             MYSQL_USER: $MYSQL_USER
             MYSQL_PASSWORD: $MYSQL_PASSWORD
-
+            TIMEZONE: $TIMEZONE
         networks:
             net:
         volumes:
@@ -40,9 +46,10 @@ services:
             - "$DB_PORT:3306"
         environment:
             MYSQL_ROOT_PASSWORD: $MYSQL_ROOT_PASSWORD
-            MYSQL_DATABASE: $MYSQL_DATABASE
+            MYSQL_DATABASE: $MYSQL_DATABASE 
             MYSQL_USER: $MYSQL_USER
             MYSQL_PASSWORD: $MYSQL_PASSWORD
+            DB_PORT: $DB_PORT
         networks:
             net:
         volumes:
