--- a/docker/.env
+++ b/docker/.env
@@ -23,7 +23,8 @@ TIMEZONE=3
 
 ############### DB #########################
 MYSQL_ROOT_PASSWORD=5986
-MYSQL_DATABASE=testing
+MYSQL_DATABASE=test
 MYSQL_USER=testUser
 MYSQL_PASSWORD=user5986
 DB_PORT=3307
+DB_HOST=192.168.223.80#MTS, HOME:192.168.1.7
