--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
         "sachkov/lenvendoconsolelib": "*",
         "psr/container": "^2.0",
         "doctrine/dbal": "^3.3",
-        "symfony/console": "^5.4"
+        "symfony/console": "^5.4",
+        "twig/twig": "^3.0"
     },
     "autoload": {
         "psr-4": {
