--- a/docker/.env
+++ b/docker/.env
@@ -27,4 +27,4 @@ MYSQL_DATABASE=test
 MYSQL_USER=testUser
 MYSQL_PASSWORD=user5986
 DB_PORT=3307
-DB_HOST=192.168.223.80#MTS, HOME:192.168.1.7
+DB_HOST=192.168.96.80
