--- a/composer.json
+++ b/composer.json
@@ -18,5 +18,8 @@
             "type":"git",
             "url":"https://github.com/sachkov/lenvendoconsolelib"
         }
-    ]
+    ],
+    "require-dev": {
+        "phpunit/phpunit": "^9.5.1"
+    }
 }
